<resources>
    <string name="app_name">Parqueo Para Todos</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="olvidaste_tu_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="no_tienes_cuenta_registrate">¿No tienes cuenta? Regístrate</string>
    <string name="o_inicia_sesion_con">O inicia sesión con</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
    <string name="logout">Logout</string>
    <string name="registro_de_usuario">Registro de Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_una_cuenta_inicia_sesion">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="repetir_contrasena">Repetir contraseña</string>
    <string name="por_favor_verifica_tu_correo_electronico">Por favor, verifica tu correo electrónico</string>
    <string name="reenviar_correo_de_verificacion">Reenviar correo de verificación</string>
    <string name="volver_a_iniciar_sesion">Volver a iniciar sesión</string>
    <string name="enviando_correo_de_recuperacion">Enviando correo de recuperación...</string>
    <string name="enviar_correo_de_recuperacion">Enviar correo de recuperación</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
</resources>