<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center"
    android:padding="16dp"
    >

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/avLogoView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/parking_animation" />

    <ImageView
        android:id="@+id/ivBanner"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="centerInside"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toTopOf="@+id/avLogoView"
        app:layout_constraintStart_toStartOf="@+id/avLogoView"
        app:layout_constraintBottom_toBottomOf="@+id/avLogoView"
        app:srcCompat="@drawable/appbanner" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avLogoView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:drawableStart="@drawable/ic_customer"
            android:drawablePadding="4dp"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            app:startIconContentDescription="@string/correo_electronico" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:drawableStart="@drawable/ic_icon_password"
            android:drawablePadding="4dp"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:paddingStart="0dp"
            android:paddingEnd="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/iniciar_sesion"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/olvidaste_tu_contrasena"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_tienes_cuenta_registrate"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView" />

    <TextView
        android:id="@+id/orTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/o_inicia_sesion_con"
        app:layout_constraintBottom_toTopOf="@id/socialLoginLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/socialLoginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/facebookSignInButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="3"
            android:text="@string/facebook"
            android:textSize="12sp"
            app:icon="@drawable/ic_facebook"
            app:iconGravity="top"
            app:iconTint="#ffffff"
            app:iconTintMode="multiply" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/twitterSignInButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="3"
            android:text="@string/twitter"
            android:textSize="12sp"
            app:icon="@drawable/ic_twitterx"
            app:iconGravity="top" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/googleSignInButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/google"
            android:textSize="12sp"
            app:icon="@drawable/ic_google"
            app:iconGravity="top"
            app:iconTint="#ffffff"
            app:iconTintMode="multiply" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

