<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/checkEmailAnimationView"
        android:layout_width="match_parent"
        android:layout_height="288dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_enableMergePathsForKitKatAndAbove="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/check_email_animation"/>


    <TextView
        android:id="@+id/verificationMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/por_favor_verifica_tu_correo_electronico"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/checkEmailAnimationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resendEmailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reenviar_correo_de_verificacion"
        app:layout_constraintTop_toBottomOf="@id/verificationMessageTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorButton"
        android:textColor="@android:color/white"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backToLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver_a_iniciar_sesion"
        app:layout_constraintTop_toBottomOf="@id/resendEmailButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:textColor="@color/colorAccent"
        style="@style/Widget.Material3.Button.OutlinedButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>